# android-freq-control

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TABNINE.md  build.sh  run.py
app/: freq_ctl.cc
config/soc/: s5e9955.h
include/freq_control/: device_config.h  device_registry.h  freq_controller.h  thread_affinity.h
include/freq_control/soc/: s5e9955.h
src/: device_config.cc  freq_controller.cc  sysfs_io.cc  sysfs_io.h  thread_affinity.cc
tools/: gen_device_config.py
